fix alignement issue between answer's letter and text

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -44,6 +44,8 @@
   }
 
   &__item {
+    display: flex;
+    align-items: center;
     background-color: white;
     margin-bottom: 1.25rem;
     font-weight: 500;
@@ -82,7 +84,6 @@
   &__letter {
     background: $blue-gradient;
     color: set-text-color($dark-blue);
-    display: inline-block;
     margin-right: 0.625rem;
     padding: 0.9375rem;
   }
